; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ral/extr_rt2661.c_rt2661_set_macaddr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ral/extr_rt2661.c_rt2661_set_macaddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rt2661_softc = type { i32 }

@RT2661_MAC_CSR2 = common dso_local global i32 0, align 4
@RT2661_MAC_CSR3 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rt2661_softc*, i32*)* @rt2661_set_macaddr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rt2661_set_macaddr(%struct.rt2661_softc* %0, i32* %1) #0 {
  %3 = alloca %struct.rt2661_softc*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.rt2661_softc* %0, %struct.rt2661_softc** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 1
  %11 = load i32, i32* %10, align 4
  %12 = shl i32 %11, 8
  %13 = or i32 %8, %12
  %14 = load i32*, i32** %4, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 2
  %16 = load i32, i32* %15, align 4
  %17 = shl i32 %16, 16
  %18 = or i32 %13, %17
  %19 = load i32*, i32** %4, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 3
  %21 = load i32, i32* %20, align 4
  %22 = shl i32 %21, 24
  %23 = or i32 %18, %22
  store i32 %23, i32* %5, align 4
  %24 = load %struct.rt2661_softc*, %struct.rt2661_softc** %3, align 8
  %25 = load i32, i32* @RT2661_MAC_CSR2, align 4
  %26 = load i32, i32* %5, align 4
  %27 = call i32 @RAL_WRITE(%struct.rt2661_softc* %24, i32 %25, i32 %26)
  %28 = load i32*, i32** %4, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 4
  %30 = load i32, i32* %29, align 4
  %31 = load i32*, i32** %4, align 8
  %32 = getelementptr inbounds i32, i32* %31, i64 5
  %33 = load i32, i32* %32, align 4
  %34 = shl i32 %33, 8
  %35 = or i32 %30, %34
  store i32 %35, i32* %5, align 4
  %36 = load %struct.rt2661_softc*, %struct.rt2661_softc** %3, align 8
  %37 = load i32, i32* @RT2661_MAC_CSR3, align 4
  %38 = load i32, i32* %5, align 4
  %39 = call i32 @RAL_WRITE(%struct.rt2661_softc* %36, i32 %37, i32 %38)
  ret void
}

declare dso_local i32 @RAL_WRITE(%struct.rt2661_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
